--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DryWet — Clean, Refresh, Dry in One Swipe</title>
+  <title> DryWet — One Wipe, Two Functions, ZERO Mess </title>
   <meta name="description" content="DryWet is a dual‑surfaced wipe that cleans, refreshes, and dries in one swipe—designed with dermatology and clinical settings in mind.">
   <link rel="icon" href="/assets/favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,7 +52,7 @@
       <div class="card">
         <h3>Specs (prototype)</h3>
         <dl class="specs">
-          <dt>Wet side</dt><dd>100% viscose, 45 GSM</dd>
+          <dt>Wet side</dt><dd> Biodegradable Materials </dd>
           <dt>Dry side</dt><dd>Cotton/viscose options under test</dd>
           <dt>Size</dt><dd>To be finalized</dd>
           <dt>Status</dt><dd>Supplier sampling & testing</dd>
@@ -63,7 +63,7 @@
     <section id="story" class="container">
       <div class="card">
         <h2>Our story</h2>
-        <p>Founded by a pre‑med and clinical researcher who saw, firsthand, the need for a simple, skin‑friendly solution in hospitals and everyday life. DryWet aims to improve hygiene access for underserved communities while reducing waste in clinical settings.</p>
+        <p> Founded by a clinical researcher who saw, firsthand, the need for a simple, skin‑friendly solution in hospitals and everyday life. DryWet aims to improve hygiene access for underserved communities while reducing waste in clinical settings.</p>
       </div>
     </section>
 
