--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <section class="hero container">
       <div class="hero-text">
-        <h1>Clean. Refresh. Dry.<br><span class="accent">One swipe.</span></h1>
+        <h1> One Wipe, Two Functions <br><span class="accent"> ZERO Mess. That's DryWet</span></h1>
         <p class="lead">A patent‑pending, dual‑surfaced wipe engineered for sensitive skin and clinical care. Wet on one side, dry on the other. Less waste, better hygiene.</p>
         <div class="cta-row">
           <a class="btn primary" href="#waitlist">Join the waitlist</a>
