--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> DryWet. All rights reserved.</p>
+      <p>© <span id="year"></span> DryWet LLC. All rights reserved.</p>
     </div>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
