--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="/">DryWet</a>
+      <a class="brand" href="/">
+        <img class="logo" src="/assets/DryWet_Logo_Horizontal.png" alt="DryWet" />
       <nav>
         <a href="#product">Product</a>
         <a href="#story">Story</a>
