--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <h1 class="no-wrap">One&nbsp;Wipe, Two&nbsp;Functions <br><span class="accent"> ZERO Mess. That's DryWet</span></h1>
         <p class="lead">A patent‑pending, dual‑surfaced wipe engineered for sensitive skin and clinical care. Wet on one side, dry on the other. Less waste, better hygiene.</p>
         <div class="cta-row">
-            <a class="btn primary" href="#waitlist">Join the waitlist</a>
-            <a class="btn ghost" href="#product">Learn more</a>
+          <a href="#waitlist" class="btn primary">Join the waitlist</a>
+          <a href="#product"  class="btn ghost">Learn more</a>
         </div>
         <p class="subtext">Launching soon on Kickstarter.</p>
       </div>
